--- a/src/index.css
+++ b/src/index.css
@@ -659,6 +659,27 @@ display:none;
   .item{
     min-height: 500px;
   }
+  .test-hr{
+    width: 70%;
+  }
+}
+
+@media screen and (min-width: 1090px) and (max-width: 1100px){
+  .test-hr{
+    width: 71%;
+  }
+}
+
+@media screen and (min-width: 1150px) and (max-width: 1199px){
+  .test-hr{
+    width: 72%;
+  }
+}
+
+@media screen and (min-width: 1200px) and (max-width: 1280px){
+  .test-hr{
+    width: 73%;
+  }
 }
 
 /* macbook air */
